[tool.poetry]
name = "gallows"
version = "0.1.0"
description = ""
authors = ["AmaneTsu <63858627+AmaneTsukasa@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Random-Word = "^1.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
